--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title> Welcome </title>
 </head>
 <body>
-	<div>
-		<h1>Welcome To Edureka - Page1</h1>
-		<p>Hi</p>
-	</div>
+	<center>
+		<h1>Welcome To Home Page</h1>
+		<p>Get Started</p>
+	</center>
 </body>
 </html>
